# nod

./: .gitignore  AGENTS.md  Cargo.toml  README.md
data/: yule-Z390-AORUS-PRO-WIFI_.2026-03-24
docs/superpowers/plans/: 2026-03-23-rust-probe-implementation.md
docs/superpowers/specs/: 2026-03-23-nod-event-schema.md
src/: collector.rs  main.rs  models.rs
